Fix picker wrapping

--- a/packages/donor/src/components/basic/Picker/Picker.module.scss
+++ b/packages/donor/src/components/basic/Picker/Picker.module.scss
@@ -3,13 +3,15 @@
   margin-inline-start: 5px;
 }
 
-.buttonRow {
+.pickerButtons {
   display: flex;
+  justify-content: start;
   flex-direction: row;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .pickerButton {
   margin: 5px;
-  flex: 1;
+  min-width: 80px;
 }
